# wagtail_editorjs

./: .GITIGNORE  MANIFEST.in  README.md  push-to-github.ps1  setup.cfg
.github/workflows/: main.yml
docs/: editorjs_feature.md  tunes.md
docs/examples/: editorjs_feature_example.py  editorjs_tunes_example.py
tests/testapp/testapp/: settings.py
wagtail_editorjs/: __init__.py  apps.py  blocks.py  django_editor.py  features.py  fields.py  forms.py  hooks.py  registry.py  render.py  settings.py  tests.py  urls.py
wagtail_editorjs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_editorjs/editorjs/: __init__.py  attrs.py  element.py  features.py  utils.py
wagtail_editorjs/features/: __init__.py  blocks.py  documents.py  images.py  inlines.py  lists.py  tunes.py
wagtail_editorjs/registry/: __init__.py  feature_registry.py  value.py
wagtail_editorjs/registry/element/: __init__.py  attrs.py  element.py  utils.py
wagtail_editorjs/registry/features/: __init__.py  base.py  basic.py  inlines.py  snippets_inlines.py  view.py
wagtail_editorjs/templates/wagtail_editorjs/: rich_text.html
wagtail_editorjs/templatetags/: editorjs.py
wagtail_editorjs/test/: manage.py  simple.md
wagtail_editorjs/test/core/: apps.py
wagtail_editorjs/test/testapp/: settings.py  urls.py  wsgi.py
wagtail_editorjs/tests/: __init__.py  render.py  test_attrs.py  test_inlines.py  test_render.py  utils.py
wagtail_editorjs/views/: attaches.py  images.py
wagtail_editorjs/wagtail_hooks/: __init__.py  features.py  urls.py  wagtail_fedit.py
(+27 files in other folders)
